--- a/src/styles/games.css
+++ b/src/styles/games.css
@@ -107,7 +107,7 @@ nav {
   cursor: default;
 }
 
-.player:nth-child(1) > button:active,
+.player:nth-child(1) button:active,
 .reset button:active {
   transform: translate(0, 5px);
 }
